package io.hohichh.planning_assistant.model.calendar;

public class Subtask {
    
}
